==> rogerclarkmelbourne/Arduino_STM32/STM32F1/libraries/Serasidis_EtherCard_STM/src/enc28j60.cpp <==
#include <Arduino.h> // Arduino 1.0
#include <Wprogram.h> // Arduino 0022
#include "enc28j60.h"
#include <SPI.h> // Using library SPI in folder: D:\Documents\Arduino\hardware\STM32\STM32F1XX\libraries\SPI
#define ADDR_MASK        0x1F
#define BANK_MASK        0x60
#define SPRD_MASK        0x80
#define EIE              0x1B
#define EIR              0x1C
#define ESTAT            0x1D
#define ECON2            0x1E
#define ECON1            0x1F
#define ERDPT           (0x00|0x00)
#define EWRPT           (0x02|0x00)
#define ETXST           (0x04|0x00)
#define ETXND           (0x06|0x00)
#define ERXST           (0x08|0x00)
#define ERXND           (0x0A|0x00)
#define ERXRDPT         (0x0C|0x00)
#define EDMAST          (0x10|0x00)
#define EDMAND          (0x12|0x00)
#define EDMACS          (0x16|0x00)
#define EHT0             (0x00|0x20)
#define EHT1             (0x01|0x20)
#define EHT2             (0x02|0x20)
#define EHT3             (0x03|0x20)
#define EHT4             (0x04|0x20)
#define EHT5             (0x05|0x20)
#define EHT6             (0x06|0x20)
#define EHT7             (0x07|0x20)
#define EPMM0            (0x08|0x20)
#define EPMM1            (0x09|0x20)
#define EPMM2            (0x0A|0x20)
#define EPMM3            (0x0B|0x20)
#define EPMM4            (0x0C|0x20)
#define EPMM5            (0x0D|0x20)
#define EPMM6            (0x0E|0x20)
#define EPMM7            (0x0F|0x20)
#define EPMCS           (0x10|0x20)
#define EWOLIE           (0x16|0x20)

void ENC28J60::initSPI () {
	
    SPI.begin();
	SPI.setBitOrder(MSBFIRST);
	//SPI.setDataMode(SPI_MODE0);
	//SPI.setClockDivider(SPI_CLOCK_DIV16);
}

static void enableChip () {
    //cli();
    digitalWrite(selectPin, LOW);
}

static void disableChip () {
    digitalWrite(selectPin, HIGH);
    //sei();
}

static byte readOp (byte op, byte address) {
    enableChip();
	byte result;
    //xferSPI(op | (address & ADDR_MASK));
    //xferSPI(0x00);
    //if (address & 0x80)
    //    xferSPI(0x00);
    //byte result = SPDR;
	
	SPI.transfer(op | (address & ADDR_MASK));
	result = SPI.transfer(0x00);
	if (address & 0x80)
		result = SPI.transfer(0x00);
	
    disableChip();
    return result;
}

static void readBuf(uint16_t len, byte* data) {
    enableChip();
    //xferSPI(ENC28J60_READ_BUF_MEM);
	SPI.transfer(ENC28J60_READ_BUF_MEM);
    while (len--) {
        //xferSPI(0x00);
        //*data++ = SPDR;
		*data++ = SPI.transfer(0x00);
    }
    disableChip();
}
